# zk_offline_dqn

./: .gitignore  LICENSE  Makefile  README.md  codechya.py  proof_statement_design.md  requirements.txt  setup.py
.github/workflows/: regression.yml
artifacts/: minibatch_td_from_dataset.json
artifacts/short_trace_work/: step_1_post_4_5_6_7.pt
data/: cartpole_dqn_eps010_transitions.pkl
docs/: README.md  architecture.md  artifact_schema.md  backend_choice.md  backend_coverage.md  backend_selection_v0_12.md  claim_matrix.md  colab_sp1_td_mvp.md  current_benchmark_snapshot.md  dev_commands.md  forward_td_mlp_result.md  legacy_status.md  ndss_astar_3_month_roadmap.md  paper_alignment_audit.md  phase_b_forward_td_mlp.md  phase_c_one_step_sgd_tiny.md  phase_d_second_environment.md  q1_astar_roadmap_4_6_weeks.md  refactor_final_summary.md  refactor_phase2a_membership_status.md  refactor_phase2f_one_step_update_status.md  refactor_phase2g_short_trace_status.md  refactor_phase6_sp1_alignment_status.md  refactor_phase7_reports_status.md  release_checklist.md  reporting_policy.md  reproducibility.md  sp1_python_alignment.md  threat_model.md  week5_artifact_package.md  zk_backend_mvp.md
kaggle_phase6_sp1_validation/: kernel-metadata.json
kaggle_phase6_zkp_drl/: kaggle_sp1_validation.py  phase6_sp1_validation.ipynb
kaggle_phase6_zkp_drl_backup/: kaggle_sp1_validation.py  kernel-metadata.json  phase6_sp1_validation.ipynb  setup_sp1_on_kaggle.sh  zkp-drl.ipynb
models/: offline_dqn_with_target_seed42_best.pt
paper/: CHANGELOG.md  README.md  main.tex  refs.bib
paper/sections/: abstract.tex  appendix.tex  conclusion.tex  discussion.tex  experimental_setup.tex  formal_statements.tex  introduction.tex  limitations.tex  problem_setup.tex  related_work.tex  results.tex  security_analysis.tex  sp1_backend.tex  threat_model.tex  zk_direction.tex
scripts/analysis/: analyze_cql_log.py  analyze_offline_log.py  analyze_transition_dataset.py  inspect_all_leaves.py  inspect_dataset.py  inspect_transition_dataset.py
scripts/artifacts_export/: export_forward_td_mlp_test_vector.py  export_minibatch_td_artifact.py  export_minibatch_td_artifact_from_dataset.py  export_one_step_sgd_tiny_test_vector.py  export_one_step_update_artifact.py  export_short_trace_update_artifact.py  export_td_mvp_batch_test_vector.py  export_td_mvp_test_vector.py  export_td_sample_artifact.py  export_td_sample_artifact_from_dataset.py  export_transition_membership_artifact.py  verify_forward_td_consistency.py  verify_forward_td_mlp_test_vector.py  verify_minibatch_td_artifact.py  verify_one_step_sgd_tiny_test_vector.py  verify_one_step_update_artifact.py  verify_short_trace_update_artifact.py  verify_td_mvp_test_vector.py  (+2 more)
zk_backend/: README.md
zk_backend/forward_td_mlp/sp1/host/: Cargo.toml
zk_backend/forward_td_mlp/sp1/host/src/: main.rs
zk_backend/merkle_membership/sp1/host/: Cargo.toml
zk_backend/merkle_membership/sp1/host/src/: main.rs
zk_backend/one_step_sgd_tiny/sp1/host/: Cargo.toml  build.rs
zk_backend/one_step_sgd_tiny/sp1/host/src/: main.rs
zk_backend/short_trace/sp1/host/: Cargo.toml
zk_backend/short_trace/sp1/host/src/: main.rs
zk_backend/td_mvp/sp1/: Cargo.toml  README.md  run_negative_cases.sh  tamper_checklist.md  toolchain.md
zk_backend/td_mvp/sp1/guest/: Cargo.toml  README.md
zk_backend/td_mvp/sp1/guest/src/: main.rs
zk_backend/td_mvp/sp1/host/: Cargo.toml  README.md
zk_backend/td_mvp/sp1/host/src/: main.rs
zk_backend/td_mvp/sp1/shared/: Cargo.toml  README.md
zk_backend/td_mvp/sp1/shared/src/: lib.rs
zk_backend/training_fragment/sp1/host/: Cargo.toml
zk_backend/training_fragment/sp1/host/src/: main.rs
zk_offline_dqn/: __init__.py  artifact_export_utils.py  artifact_schema_versions.py  commitments.py  data_pipeline.py  forward_td_mlp.py  io_utils.py  merkle.py  models.py  sampling_rules.py  zk_specs.py
(+359 files in other folders)
