[workspace]
members = ["guest", "host", "shared"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sp1-build = "6.1.0"
sp1-sdk = "6.1.0"
sp1-zkvm = "6.1.0"
tempfile = "3.10"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
