[package]
name = "merkle-membership-host"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sp1-sdk.workspace = true
tempfile.workspace = true
merkle-membership-shared = { path = "../shared" }
tokio.workspace = true

[build-dependencies]
sp1-build.workspace = true
