[package]
name = "short-trace-host"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
short-trace-shared = { path = "../shared" }
sp1-sdk.workspace = true
tokio.workspace = true

[build-dependencies]
sp1-build.workspace = true

