[package]
name = "td-mvp-host"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sp1-sdk.workspace = true
tempfile.workspace = true
td-mvp-shared = { path = "../shared" }
tokio.workspace = true

[build-dependencies]
sp1-build.workspace = true
